--- a/localisation/english/POL - Poland_l_english.yml
+++ b/localisation/english/POL - Poland_l_english.yml
@@ -30,15 +30,20 @@
 
  #Leader traits
  POL_governor_general:0 "General Governor"
-
-
  #Medals
 
 
  # Scripted Loc #
 
  ### Decisions ###
- POL_second_blue_army_transport: "Second Blue Army Transport"
+ POL_wars_for_the_borders:0 "Wars for the Borders"
+ POL_relief_for_lwow:0 "Relief for Lwów"
+ POL_relief_for_lwow_desc:0 ""
+ POL_defence_of_lwow:0 "Defence of Lwów"
+ POL_defence_of_lwow_desc:0 ""
+ POL_send_dowbor_musnicki_to_GGP:0 "Send Dowbor-Muśnicki to Greater Poland"
+ POL_send_dowbor_musnicki_to_GGP_desc:0 ""
+ POL_second_blue_army_transport:0 "Second Blue Army Transport"
 
 
  ### Tooltips ###
@@ -74,6 +79,7 @@
  POL_oath_crisis_desc:0 "Faced with the unfair treatment of the Polish cause by the Central Powers, the soldiers of the Polish Legions of the First and Third Brigades, loyal to Józef Piłsudski, refused to swear allegiance to the Kingdom of Poland and honor the brotherhood of arms with the armies of Germany and Austria-Hungary in the Great War. Legionaries who refused to take the oath were interned by the German and Austrian occupation authorities. Following the crisis, Józef Piłsudski and Kazimierz Sosnkowski were arrested. After brief detention in several prisons, Piłsudski was taken to Magdeburg, where he is held in strict isolation in a military fortress. The oath crisis cast a shadow over the ability to recruit units of the Polish Armed Forces (Polnische Wehrmacht) in the Kingdom and triggered a political crisis in the country, leading to the self-dissolution of the Provisional Council of State in protest."
  POL_governor_general_idea:0 "Governor-General Rule"
  POL_governor_general_idea_desc:0 "Governor-general of Generalgouvernement Warschau Hans Hartwig von Beseler de facto governs the Kingdom of Poland while balancing the realisation of German interests with Polish independence aspirations. His rule in Warsaw is based on a policy of strict control while attempting to maintain a semblance of autonomy and make concessions to the Poles, which arouses mixed feelings among the Polish people. Beseler is seen as a symbol of German occupation, and his rule increases the sense of dependence on foreign powers and the social rift between cooperation and resistance among Poles."
+ ### INDEPENDENT POLAND ###
  POL_not_yet_lost: "Poland Is Not Yet Lost!"
  POL_not_yet_lost_desc: "After the Great War and the defeat in it, of all three partitioners, the dream of many generations of Poles about their desired independence finally came true. Years of captivity of Poland being in the shackles of the partitioners, strengthened by the spirit of romanticism and messianism, expressed in the literature of Mickiewicz and Słowacki, bought with the blood shed in the national uprisings of November 1831 and January 1863, intensified the spirit of Poles who fought "For our freedom and yours" wherever they were. The end of the 1860s and the defeats of the national uprisings brought about the strengthening of the idea of positivism on Polish soil, included in the literature of Henryk Sienkiewicz or Bolesław Prus, aiming at organic work at the basis of the development of the Polish nation. The rise and development of Polish nationalism, based on the ideas of positivism and proclaiming the unification of Polish lands from all the partitions, strengthened both physically and materially the Polish nation in its aspiration for an independent state. The beginning of the 1890th brought modernism and neo-Romanticism to Poles, described as "Young Poland", expressed in the prose of Reymont, Żeromski or Wyspiański. This era strengthened expressionism, which gained a lot of attention, especially in socialist circles, which aimed at levelling social inequalities and overthrowing the reactionary order in Europe. The Polish society, which differed in its worldview, had one goal in common; this goal was to regain its statehood and the independence it would defend to the end. "Poland has not yet perished, So long as we still live.""
  POL_ruined_economy: "Ruined Economy"
@@ -84,10 +90,13 @@
  POL_political_instability_2_desc: "Despite the control of revolutionary moods, the current socialist cabinet is not tolerated by a large part of Polish society, which does not consider it as a common government of Poland. People with non-Leftist views do not want to pay taxes to the current government, do not agree with many of the reforms that the government announces and strive to establish a universal pro-Entente cabinet. The international situation in which the government finds itself is also to its detriment. Józef Piłsudski, known for his sympathies and influence in left-wing circles, and marked by his cooperation with the Central Powers, is difficult to accept by the Entente, which recognizes the Polish National Committee, residing in Paris, as the rightful government of Poland. One thing is certain, either there will be an inter-party agreement or the government will sooner or later be overthrown."
  POL_political_instability_3: "Political Instability: Relative Compromise"
  POL_political_instability_3_desc: "The conclusion of a compromise between Józef Piłsudski, the Warsaw government and the Polish National Committee in Paris, relaxed the tense atmosphere in the country. The quarrels at the very beginning of independence do not foster political stability or recognition by the victorious powers, which Poland urgently needs. The most important goal now is to hold elections to the Legislative Sejm and to adopt a Constitution that will create the legal basis for a reborn Poland."
+ POL_relief_for_lwow_idea:0 "Relief for Lwów"
+ POL_relief_for_lwow_idea_desc:0 ""
+ POL_wilno_operation_idea:0 "Wilno Operation"
+ POL_wilno_operation_idea_desc:0 ""
  POL_council_of_national_defense_idea:0 "Council of National Defense"
  POL_volunteer_army_idea:0 "Volunteer Army"
  POL_volunteer_army_idea_desc:0 ""
- ### AuthDem Ideas ###
 
  ### Other
 
@@ -456,9 +465,6 @@
  POL_chief_of_state_influence_high:0 "High Chief of State Influence"
  POL_chief_of_state_influence_medium:0 "Medium Chief of State Influence"
  POL_chief_of_state_influence_low:0 "Low Chief of State Influence"
-
-
-
 
 
  ### Characters ###
