--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -10523,9 +10523,9 @@ FIN_establish_kingdom: "Establish Kingdom"
 FIN_establish_kingdom_desc: "Our people have been led by kings and emperors since 1323 and even our constitution says that our nation should be led by a monarch. But unlike the other Nordics whose monarchs are week and rather figureheads we need a strong king to unite our nation and lead us to brighter future. "
 FIN_slavery_act: "Forced Labour Act"
 FIN_slavery_act_desc: "After our victory we now have many thousands of prisoners in our prison camp whose conditions are rather poor. Meanwhile our nation is also suffering from food shortages. In order to solve both of the problems at the same time we should pass a law allowing us to send our prisoners to work in German mines and in return get fertilisers for our agriculture."
-FIN_slavery_act_tt: "We will provide [GER.GetFlag]§YGermany§! some of our prisoners to work in their mines and in return we will get §Yfew shipments of Fertilisers§! from [GER.GetFlag]§YGermany§! over time."
+FIN_slavery_act_tt: "We will provide [GER.GetFlag]§YGermany§! some of our prisoners to work in their mines and in return we will get a §Yfew shipments of Fertilisers§! from [GER.GetFlag]§YGermany§! over time."
 FIN_defeat_the_rebels: "Down With the Traitors"
-FIN_defeat_the_rebels_desc: "It seems like some of our brothers and sister have been brainwashed to believe the Bolshevik ideas which has led to them turning against their own beloved homeland. Even though some of our fellow countrymen have turned their backs to our nation doesn't mean that we should do it."
+FIN_defeat_the_rebels_desc: "It seems like some of our brothers and sister have been brainwashed to believe the Bolshevik ideas which has led to them turning against their own beloved homeland. But even though some of our fellow countrymen have turned their backs to our nation doesn't mean that we should do it."
 FIN_pardon_the_reds_tt: "Will unlock further decisions over time to£decision_icon_small §YPardon members of the§! §RRed Guards§!"
 FIN_pardon_the_reds: "Pardon the Ones Who Didn't Fight"
 FIN_pardon_the_reds_desc: "Even though at least according to some not just all the men but the women and the children too in the prison camps deserve their destinies but according to some the ones who didn't participate the rebellion should be pardoned in order to both get our economy back to its feet and improve the horrendous conditions in the camps."
@@ -10547,6 +10547,7 @@ FIN_disarm_russian_garrisons: "Disarm Foreign Garrisons"
 FIN_disarm_russian_garrisons_desc: "Even though our country has been independent for some time now there are still many foreign garrisons in our territory. We should disarm those garrisons and send the soldiers back to their country and use their weapons to equip our own army."
 FIN_civilwar_conscription: "Temporary Universal Conscription"
 FIN_civilwar_conscription_desc: "In order to get more men into the frontlines we need to declare temporary universal conscription for all men. This can legally be done according to the 1878 conscription act so this shouldn't cause any serious problems between the civilian and military leaderships."
+FIN_civilwar_conscription_tt: "Unlocks Decisions: £decision_icon_small §YTo raise §! §CGrenadier Regiments§! §Yfrom the new conscripts§!"
 FIN_foreign_policy: "Now that we have finally secured independece for our nation we have to determine our directions for future foreign policy."
 FIN_foreign_policy: "Estabilish Minsitery for Foreign Affairs"
 FIN_volunteers_to_EST: "Help Out Our Brothers in Estonia"
@@ -10555,8 +10556,9 @@ FIN_approach_entente: "Approach Entente"
 FIN_approach_entente_desc: "Now when the Germans have lost the Great war we should turn our boat around and try to first get recognisition from the Entente and then humanitarian aid and protection later on."
 FIN_establish_military_academy: "Establish Cadet School"
 FIN_establish_military_academy_desc: ""
-FIN_1919_parliamentary_election: "Hold New and Free Elections"
+FIN_1919_parliamentary_election: "Hold New Free Elections"
 FIN_1919_parliamentary_election_desc: ""
+FIN_1919_constitution: "Rewrite the Constitution"
 
 FIN_pardon_the_reds_days_tt: "Current days are: [?FIN_pardon_the_reds:days|Y0]"
 FIN_pardon_the_reds_completed_tt: "Has completed focus §YPardon the Ones Who Didn't Fight§!"
