--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -10588,7 +10588,7 @@ VIN_expand_the_asian_fleet:0 "Expand the Asian Fleet"
 VIN_expand_the_asian_fleet_desc:0 "The situation in Asia does not allow our current forces to maintain sufficient pressure. The mainland must send us additional equipment to help with our defense on the high seas."
 
 VIN_reach_the_french_parliament:0 "Reach French Parliament"
-VIN_reach_the_french_parliament_desc:0 "The metropolis is able to provide us with additional one-off assistance if we request it. These potential investments will help stimulate our local economy."
+VIN_reach_the_french_parliament_desc:0 "The metropole is able to provide us with additional one-off assistance if we request it. These potential investments will help stimulate our local economy."
 
 VIN_land_reform:0 "Land Reform"
 VIN_land_reform_desc:0 "The new local administration is able to assess the potential of certain agricultural regions, particularly in rural areas in the west of the country. Financing a major development investment will ensure great growth in Indochina."
