--- a/localisation/russian/ww1_decisions_l_russian.yml
+++ b/localisation/russian/ww1_decisions_l_russian.yml
@@ -800,7 +800,7 @@
 
  GER_AUH_FRA_annex_luxemburg:0 "§Y[LUX.getFlag][LUX.getNameDef]§! будет интегрирован в §Y[GER.getFlag]Германию§!."
 
- AUH_negociation_with_germany_means_no_secret:0 "§RЕсли мы свяжемся с §Y[GER.getFlag]Германией§!, они поймут, что мы пытаемся выйти из войны. Мы не можем предсказать их реакцию. !§!"
+ AUH_negociation_with_germany_means_no_secret:0 "§RЕсли мы свяжемся с §Y[GER.getFlag]Германией§!, они поймут, что мы пытаемся выйти из войны. Мы не можем предсказать их реакцию !§!"
  
  AUH_no_negociation_with_germany:0 "Процесс переговоров останется в тайне, но §Y[FRA.getFlag][FRA.getNameDef]§! может отказаться от этой точки зрения."
 
@@ -940,7 +940,7 @@
  FRA_shneider_artillery_manufactures_in_le_havre_mission_tt_title:0 "Построить §Y2 военных завода§! в §Y[15.getName]§!"
  FRA_shneider_artillery_manufactures_in_le_havre_mission_tt:0 "[?15.arms_factory_level|+0]/§Y[?15.military_total_after_goal]§! §Yвоенных завода§! построено в §Y[15.getName]§!"
 
- FRA_complete_schneider_steel_mill_implementation_in_sete:0 "Полное внедрение сталелитейного завода Schneider в Сете"
+ FRA_complete_schneider_steel_mill_implementation_in_sete:0 "Полное внедрение сталелитейного завода «Schneider» в Сете"
  FRA_complete_schneider_steel_mill_implementation_in_sete_desc:0 "Компания «Schneider et Cie» построила экспериментальный сталелитейный завод в городе Сет в период с 1898 по 1910 год, после чего отказалась от проекта. Государство могло бы рефинансировать внедрение «Schneider» в этот сектор, что обеспечило бы создание рабочих мест и динамичное развитие региона."
  FRA_complete_schneider_steel_mill_implementation_in_sete_mission_tt:0 "[?22.industrial_complex_level|+0]/§Y[?22.civilian_total_after_goal]§! §Yгражданская фабрика§! построена в §Y[22.getName]§!"
  FRA_complete_schneider_steel_mill_implementation_in_sete_mission_tt_title:0 "Построить §Y1 гражданскую фабрику§! в §Y[22.getName]§!"
@@ -1487,8 +1487,8 @@
 
 
 
- ROM_support_against_auh:0 "\nЕсли мы объявим войну §Y[AUH.getFlag]Австро-Венгрии§!, §Y[ROM.getFlag][ROM.getName]§! автоматически присоединится к нам. ! "
- RUS_support_against_auh:0 "\nЕсли мы объявим войну §Y[AUH.getFlag]Австро-Венгрии§!, §Y[RUS.getFlag][RUS.getName]§! автоматически присоединится к нам. ! "
+ ROM_support_against_auh:0 "\nЕсли мы объявим войну §Y[AUH.getFlag]Австро-Венгрии§!, §Y[ROM.getFlag][ROM.getName]§! автоматически присоединится к нам ! "
+ RUS_support_against_auh:0 "\nЕсли мы объявим войну §Y[AUH.getFlag]Австро-Венгрии§!, §Y[RUS.getFlag][RUS.getName]§! автоматически присоединится к нам ! "
 
 
  SER_ensure_russian_support:0 "Обеспечить поддержку со стороны России"
@@ -8794,7 +8794,7 @@ ottoman_minority_tt_desc_edirne_tt:0 "[ottoman_minority_tt_desc_edirne][TUR_otto
  FRA_french_army:0 "Французская армия"
  FRA_excessing_land_force_budget:0 "Чрезмерный бюджет армии"
  FRA_demobilize_part_of_the_army:0 "Демобилизация армии в [FROM.getName]"
- lower_army_to_750k:0 "§YУменьшить численность армии§! до менее чем §Y750 000 человек§! чтобы убрать эту идею."
+ lower_army_to_750k:0 "§YУменьшить численность армии§! до §Y750 000 человек§!, чтобы убрать эту идею."
 
  generic_provide_humanitarian_help:0 "Оказать гуманитарную помощь в [FROM.getName]"
 
@@ -9233,75 +9233,75 @@ ottoman_minority_tt_desc_edirne_tt:0 "[ottoman_minority_tt_desc_edirne][TUR_otto
  july_crisis_alert:0 "Оповещение Июльского кризиса"
  july_crisis_alert_tt:0 "§RИюльский кризис§! начинается, противостояние между §Y[AUH.getFlag][AUH.getAdjective]ими§! требованиями о репарациях к §Y[SER.getFlag]Сербии§!."
  
- FRA_vote_will_fail:0 "§RThe vote will likely fail.§!"
-FRA_vote_will_pass:0 "§GThe vote shall pass !§!"
-FRA_effect_if_law_pass:0 "\n§YEffect if the vote passes:§!"
-FRA_effect_if_law_fail:0 "\n§REffect if the vote fail:§!"
-FRA_effect_if_mission_completed:0 "\n§GEffect if mission is completed :§!"
-FRA_effect_if_mission_failed:0 "\n§REffect if mission is failed :§!"
+ FRA_vote_will_fail:0 "§RГолосование, скорее всего, провалится.§!"
+ FRA_vote_will_pass:0 "§GГолосование должно пройти успешно !§!"
+ FRA_effect_if_law_pass:0 "\n§YЭффект, если голосование пройдет успешно:§!"
+ FRA_effect_if_law_fail:0 "\n§RЭффект, если голосование провалится:§!"
+ FRA_effect_if_mission_completed:0 "\n§GЭффект при завершении миссии :§!"
+ FRA_effect_if_mission_failed:0 "\n§RЭффект в случае провала миссии:§!"
 
-FRA_fufill_schneider_contract:0 "Fulfill Schneider Contract"
-FRA_fufill_schneider_contract_desc:0 "The government awarded the company Schneider Creusot and its sub-subsidiary Somua a contract to produce 400 medium combat tanks intended to complete the mechanized force validated by the general staff."
+ FRA_fufill_schneider_contract:0 "Выполнить контракт с компанией «Schneider»"
+ FRA_fufill_schneider_contract_desc:0 "Правительство заключило с компанией «Schneider Creusot» и ее дочерним предприятием «Somua» контракт на производство 400 средних боевых танков, предназначенных для комплектования механизированных сил, утвержденных генеральным штабом."
 
-FRA_fufill_renault_contract:0 "Fulfill Renault Contract"
-FRA_fufill_renault_contract_desc:0 "The government ordered 1,850 Renault FT tanks from the Renault company intended to constitute several armored regiments. This essential mission must be accomplished at the risk of weakening the motivation of our soldiers on the front."
+ FRA_fufill_renault_contract:0 "Выполнить контракт с компанией «Renault»"
+ FRA_fufill_renault_contract_desc:0 "Правительство заказало у компании «Renault» 1850 танков «Renault FT», предназначенных для формирования нескольких бронетанковых полков. Эта важная миссия должна быть выполнена, несмотря на риск ослабления мотивации наших солдат на фронте."
 
-FRA_light_tanks_on_the_field_60:0 "[?num_equipment_in_armies@light_tank_chassis]/60 §YLight Tanks§! on the field (Or [?num_equipment@light_tank_chassis]/60 in stockpile)"
+ FRA_light_tanks_on_the_field_60:0 "[?num_equipment_in_armies@light_tank_chassis]/60 §Yлегких танков§! на поле (или [?num_equipment@light_tank_chassis]/60 в запасе)"
 
-FRA_light_tanks_on_the_field:0 "[?num_equipment_in_armies@light_tank_chassis]/1850 §YLight Tanks§! on the field (Or [?num_equipment@light_tank_chassis]/1850 in stockpile)"
-FRA_medium_tanks_on_the_field:0 "[?num_equipment_in_armies@medium_tank_chassis]/400 §YMedium Tanks§! on the field (Or [?num_equipment@light_tank_chassis]/400 in stockpile)"
+ FRA_light_tanks_on_the_field:0 "[?num_equipment_in_armies@light_tank_chassis]/1850 §Yлегких танков§! на поле (или [?num_equipment@light_tank_chassis]/1850 в запасе)"
+ FRA_medium_tanks_on_the_field:0 "[?num_equipment_in_armies@medium_tank_chassis]/400 §Yсредних танков§! на поле (или [?num_equipment@light_tank_chassis]/400 в запасе)"
 
-to_complete_mission:0 "§YTo Complete the Mission:§!"
+ to_complete_mission:0 "§YДо завершения миссии:§!"
 
-FRA_french_war_industry_seller:0 "§LTo maintain our military industry, we must make it profitable by selling part of our production to foreign trading partners.§!"
+ FRA_french_war_industry_seller:0 "§LЧтобы сохранить нашу военную промышленность, мы должны сделать ее прибыльной, продавая часть продукции иностранным торговым партнерам.§!"
 
-FRA_is_buying_60_renault_tanks:0 "Incoming French Light Tanks"
-FRA_is_buying_60_renault_tanks_desc:0 "France has promised to deliver a certain number of armored vehicles within 140 days. After this period, we may request repairs."
+ FRA_is_buying_60_renault_tanks:0 "Поступление французских легких танков"
+ FRA_is_buying_60_renault_tanks_desc:0 "Франция обещала поставить определенное количество бронетехники в течение 140 дней. По истечении этого срока мы можем потребовать ремонта."
 
-FRA_fufill_renault_contract_60_tanks:0 "Fulfill Renault Contract"
-FRA_fufill_renault_contract_60_tanks_desc:0 "We have promised the delivery of 60 light tanks. The Renault company is responsible for the preparation or production of the vehicles ordered."
+ FRA_fufill_renault_contract_60_tanks:0 "Выполнить контракт с компанией «Renault»"
+ FRA_fufill_renault_contract_60_tanks_desc:0 "Мы обещали поставить 60 легких танков. За подготовку или производство заказанных машин отвечает компания «Renault»."
 
-has_ongoing_contract_with_FRA:0 "Has an ongoing contract with §Y[FRA.getFlag][FRA.GetName]§!"
-ongoing_contract_demand:0 "Already asking for a contract"
+ has_ongoing_contract_with_FRA:0 "Имеет действующий контракт с §Y[FRA.getFlag]Францией§!"
+ ongoing_contract_demand:0 "Уже просит контракт"
 
-FRA_is_refunding_60_tanks_plus_extra:0 "Refunding Tanks Contract"
-FRA_is_refunding_60_tanks_plus_extra_desc:0 "We have not fulfilled the terms of the tank sales contract. As a result, we now have to reimburse our partner in addition to paying damages..."
-FRA_is_redundings_tanks:0 "Is Refunding a Tank Contract"
+ FRA_is_refunding_60_tanks_plus_extra:0 "Контракт на возврат танков"
+ FRA_is_refunding_60_tanks_plus_extra_desc:0 "Мы не выполнили условия договора купли-продажи резервуара. В результате мы должны возместить убытки нашему партнеру, а также выплатить..."
+ FRA_is_redundings_tanks:0 "Возврат танкового контракта"
 
-FRA_is_being_refunded_plus_extra:0 "Is Being Refunded by France"
+ FRA_is_being_refunded_plus_extra:0 "Финансируется Францией"
 
-FRA_front_populaire_party_name:0 "[getPopularFrontPartyName]"
+ FRA_front_populaire_party_name:0 "[getPopularFrontPartyName]"
 
-hardline_SFIO:0 "§rHardline SFIO§!"
-moderate_SFIO:0 "§OModerate SFIO§!"
-liberal_socialists:0 "§8Liberal Socialists§!"
-radical_party:0 "§CRadical Socialists§!"
+ hardline_SFIO:0 "§rБескомпромиссный ФСРИ§!"
+ moderate_SFIO:0 "§OУмеренный ФСРИ§!"
+ liberal_socialists:0 "§8Либеральные Социалисты§!"
+ radical_party:0 "§CРадикальные Социалисты§!"
 
-FRA_loyalty_percent:0 "[getPopularFrontLoyaltyPercent]"
+ FRA_loyalty_percent:0 "[getPopularFrontLoyaltyPercent]"
 
-hardline_SFIO_loyalty:0 "[?hardline_SFIO_loyalty|0%%]"
-moderate_SFIO_loyalty:0 "[?moderate_SFIO_loyalty|0%%]"
-liberal_socialists_loyalty:0 "[?liberal_socialists_loyalty|0%%]"
-radical_party_loyalty:0 "[?radical_party_loyalty|0%%]"
+ hardline_SFIO_loyalty:0 "[?hardline_SFIO_loyalty|0%%]"
+ moderate_SFIO_loyalty:0 "[?moderate_SFIO_loyalty|0%%]"
+ liberal_socialists_loyalty:0 "[?liberal_socialists_loyalty|0%%]"
+ radical_party_loyalty:0 "[?radical_party_loyalty|0%%]"
 
-FRA_front_populaire_explanation:0 "You must preserve the stability of the coalition. If one of its components has less than §Y20%§! stability£stability_icon£, §Rthe coalition will collapse!§!"
-FRA_front_populaire_mechanics:0 "Activate the §CFront Populaire§! decision category. Use it to check the coalition stability and the loyalty of each of its component."
+ FRA_front_populaire_explanation:0 "Вы должны сохранять стабильность коалиции. Если один из ее участников имеет менее §Y20%§! стабильности£stability_icon£, §Rкоалиция распадется!§!"
+ FRA_front_populaire_mechanics:0 "Активировать категорию решений §CНародный Фронт§!. Используйте ее для проверки стабильности коалиции и лояльности каждого из ее участников."
 
-FRA_three_hardline_sfio_law_to_pass:0 "[?SFIO_law_passed|+0]/§Y3§! §tHardline SFIO§! Laws Passed"
+ FRA_three_hardline_sfio_law_to_pass:0 "[?SFIO_law_passed|+0]/§Y3§! Законы §tБескомпромиссного ФСРИ§! приняты"
 
-vote_three_hardline_sfio_laws:0 "Concessions to SFIO"
-vote_three_hardline_sfio_laws_desc:0 "The left wing of the SFIO, made up of anarchists, communists and trade unionists, jointly demand the accentuation of reforms aimed at giving more powers to workers."
-party_coalition_lose_loyalty:0 "[getPopularFrontPartyName] will lose up to §R[?loyalty_lose|%%0] loyalty§!"
-party_coalition_gain_loyalty:0 "[getPopularFrontPartyName] will gain up to §G[?loyalty_gain|%%0] loyalty§!"
-FRA_collective_labor_agreement:0 "Collective Labor Agreement"
-FRA_collective_labor_agreement_desc:0 "The law on collective agreements proposed by MP §YLouis Bubreuilh§! proposes the establishment of agreements for each sector of the industry.\n\nThe agreements allow the establishment of specific statuses on remuneration, working conditions or qualifications. The main professional branches concerned are the UIMM metalworkers, farmers, miners, handlers and independent producers."
-FRA_communist_want_more_reforms:0 "§tHardline SFIO§! want reforms"
+ vote_three_hardline_sfio_laws:0 "Уступки ФСРИ"
+ vote_three_hardline_sfio_laws_desc:0 "Левое крыло ФСРИ, состоящее из анархистов, коммунистов и профсоюзных активистов, совместно требует акцентировать внимание на реформах, направленных на наделение рабочих большими полномочиями."
+ party_coalition_lose_loyalty:0 "[getPopularFrontPartyName] потеряет §R[?loyalty_lose|%%0] лояльности§!"
+ party_coalition_gain_loyalty:0 "[getPopularFrontPartyName] получит §G[?loyalty_gain|%%0] лояльности§!"
+ FRA_collective_labor_agreement:0 "Коллективный трудовой договор"
+ FRA_collective_labor_agreement_desc:0 "Закон о коллективных договорах, предложенный депутатом §YЛуи Дюбреем§! предлагает создать соглашения для каждого сектора промышленности.\n\nСоглашения позволяют установить особые статусы в отношении оплаты труда, условий работы или квалификации. Основными профессиональными отраслями, которых это касается, являются металлисты СПМ, фермеры, шахтеры, обработчики и независимые производители."
+ FRA_communist_want_more_reforms:0 "§tБескомпромиссный ФСРИ§! хочет реформ"
 
-FRA_protection_of_the_strike_right:0 "Protection of the Strike Right"
-FRA_protection_of_the_strike_right_desc:0 "The law proposed by deputy §YLéon Jouhaux§! protects the right to strike by protecting strikers. Among the new rights granted by the parliamentary project, we find the impossibility for a boss to sue his employees if they occupy a building, or the reduction of strike notice for trade union organizations."
+ FRA_protection_of_the_strike_right:0 "Защита права на забастовку"
+ FRA_protection_of_the_strike_right_desc:0 "Закон, предложенный депутатом §YЛеоном Жуо§! защищает право на забастовку, защищая забастовщиков. Среди новых прав, предоставляемых парламентским проектом, мы находим такие: невозможность для начальника подать в суд на своих работников, если они занимают здание, или сокращение срока уведомления о забастовке для профсоюзных организаций."
 
-FRA_worker_safety_law:0 "Worker Safety Law"
-FRA_worker_safety_law_desc:0 "The law proposed by Deputy §YAristide Briand§! allows the recognition of several new occupational diseases as well as the treatment of injuries linked to the exercise of the function, particularly in the field of manual work.\n\nIn addition, visits to a health professional will be mandatory once a year in order to establish a health check and detect possible illnesses or injuries that could lead to stopping work."
+ FRA_worker_safety_law:0 "Закон об охране труда"
+ FRA_worker_safety_law_desc:0 "Закон, предложенный депутатом §YАристидом Брианом§!, позволяет признать несколько новых профессиональных заболеваний, а также лечить травмы, связанные с выполнением функций, особенно в сфере ручного труда.\n\nКроме того, посещение медицинского работника будет обязательным раз в год, чтобы установить контроль здоровья и выявить возможные заболевания или травмы, которые могут привести к прекращению работы."
 
-FRA_salary_limitation_act:0 "Salary Limitation Act"
-FRA_salary_limitation_act_desc:0 "The law proposed by §YMaurice Thorez§! define a calculation formula limiting the maximum salary within a company based on its profits, the number of employees and the lowest salary. To resume it in its simplest form, it limits the maximum salary to 25 times the lowest salary in the company."
+ FRA_salary_limitation_act:0 "Закон об ограничении зарплаты"
+ FRA_salary_limitation_act_desc:0 "Закон, предложенный §YМорисом Торезом§!, определяет формулу расчета, ограничивающую максимальную зарплату в компании на основе ее прибыли, количества сотрудников и самой низкой зарплаты. В самом простом виде она ограничивает максимальную зарплату 25-кратным размером самой низкой зарплаты в компании."
