--- a/localisation/russian/ww1_events_l_russian.yml
+++ b/localisation/russian/ww1_events_l_russian.yml
@@ -7685,8 +7685,8 @@ FRA_french_local_investments_exploitation:0 "Minister of Work Budget Increase"
  ww1_germany.91.t:0 "Зимняя репа"
  ww1_germany.91.d:0 "Великая война дорого обходится [GER.GetNameDef], из-за морских блокад, от которых мы страдаем, нам сегодня не хватает еды для нашего населения. Несмотря на нормирование, наш народ страдает от ужасного голода что угрожает подорвать наши военные усилия."
  ww1_germany.91.a:0 "Шокирует..."
- ww1_germany.92.t:0 "Наступление на Людендорф"
- ww1_germany.92.d:0 "[GER.GetNameDefCap] нутром чувствует, что военная ситуация становится все более неблагоприятной, и предпринимает полномасштабное наступление, чтобы изменить ситуацию на укрепившемся Западном фронте. Если это наступление провалится, [GER. .GetNameDef], возможно, больше не продержится."
+ ww1_germany.92.t:0 "Наступление Людендорфа"
+ ww1_germany.92.d:0 "[GER.GetNameDefCap] чувствует, что военная ситуация становится все более неблагоприятной, и предпринимает попытку тотального наступления, чтобы изменить ситуацию на окопавшемся Западном фронте. Если это наступление провалится, [GER.GetNameDef], возможно, больше не сможет держаться."
  ww1_germany.92.a:0 "Последний выстрел, который рискует жизнью Империи."
  ww1_germany.92.b:0 "Это отчаянный шаг!"
  ww1_germany.92.c:0 "Кажется, победа или поражение решены."
@@ -13443,9 +13443,9 @@ FRA_french_local_investments_exploitation:0 "Minister of Work Budget Increase"
  ww1_generic.111.d:0 "The [FROM.getAdjective] government has officially refused our proposal."
  ww1_generic.111.a:0 "A bad choice"
 
- ww1_generic.113.t:0 "Postwar Demobilization"
- ww1_generic.113.d:0 "The war ended, and our industry is now partly obselete."
- ww1_generic.113.a:0 "A new Age"
+ ww1_generic.113.t:0 "Послевоенная демобилизация"
+ ww1_generic.113.d:0 "Война закончилась, и теперь наша промышленность частично устарела."
+ ww1_generic.113.a:0 "Новая эпоха"
 
  ww1_generic.114.t:0 "Old Weapon Destruction"
  ww1_generic.114.d:0 "The war ended, and our old equipment is now partly obselete and have to be destroyed to avoid insane maintenance cost."
