--- a/localisation/russian/ww1_characters_l_russian.yml
+++ b/localisation/russian/ww1_characters_l_russian.yml
@@ -1880,6 +1880,7 @@ VIN_joost_van_vollenhoven:0 "Joost Van Vollenhoven"
  FIU_sante_ceccherini:0 "Sante Ceccherini"
  
  # TWO-SICILES
+ SIC_nicola_barbato:0 "Nicola Barbato"
  SIC_prince_gabriel:0 "Gabriele di Borbone-Due Sicilie"
 
  # JAMAICA
