licks sussyone cheeks

--- a/localisation/english/ww1_events_l_english.yml
+++ b/localisation/english/ww1_events_l_english.yml
@@ -8699,7 +8699,7 @@ kis_news.143.a:0 "Will the revolution spread to Western Europe?"
  orange.18.d: "The incompleteness of Irish independence - as a British dominion rather than full independence - greatly irritated hardliners who argued that the treaty with Britain could not be recognised and declared a revolt that escalated into civil war."
  orange.18.a: "We must stop the bloody death! (Play as Irish Free State)"
  orange.18.b: "No more British rule! (Play as Anti-Treaty IRA)"
-
+marxist_academic2:0 "Marxist Academic"
  ww1_england.156.t: "Founding of the Royal Air Force"
  ww1_england.156.d: "While the British were not the first to make use of heavier-than-air military aircraft, the RAF is the world's oldest independent air force: that is, the first air force to become independent of army or navy control. Following publication of the "Smuts report" prepared by Jan Smuts the RAF was founded on 1 April 1918, with headquarters located in the former Hotel Cecil, during the Great War, by the amalgamation of the Royal Flying Corps (RFC) and the Royal Naval Air Service (RNAS). At that time it was the largest air force in the world. After the war, the service was drastically cut and its inter-war years were relatively quiet, with the RAF taking responsibility for the control of Iraq and executing a number of minor actions in other parts of the British Empire. The RAF's naval aviation branch, the Fleet Air Arm, was founded in 1924 but handed over to Admiralty control on 24 May 1939."
  ww1_england.156.a: "Per Ardua ad Astra!"
