--- a/localisation/english/ww1_events_l_english.yml
+++ b/localisation/english/ww1_events_l_english.yml
@@ -15089,7 +15089,7 @@ l_english:
  ww1_BUL_TUR.5.a: "Conscription of Ottoman Citizens in Bulgaria"
  ww1_BUL_TUR.5.b: "Concerns about Upcoming Mufti Elections"
  ww1_BUL_TUR.5.c: "Cease Negotiations"
- ww1_BUL_TUR.5.d: "We've made all our points"
+ ww1_BUL_TUR.5.dd: "We've made all our points"
  ww1_BUL_TUR.5.e: "Border Conflicts"
 
  ww1_BUL_TUR.6.t: "Conscription of Ottoman Citizens in Bulgaria"
@@ -15097,7 +15097,7 @@ l_english:
  ww1_BUL_TUR.6.a: "This is unacceptable"
 
  ww1_BUL_TUR.7.t: "Concerns About the Upcoming Bulgarian Mufti Elections"
- ww1_BUL_TUR.7.d: "Nasim Bey has concerns regarding the upcoming Mufti elections in Bulgaria, particularly the potential influence of Mehmet Muhiddin Efendi."
+ ww1_BUL_TUR.7.d: "We fear if Hocazade Mehmet Muhiddin Efendi is to be re-elected as the Bulgarian Mufti that by the end of the decade Muslims would lose all their rights in Bulgaria."
  ww1_BUL_TUR.7.a: "Express concerns about Mehmet Muhiddin Efendi"
 
  ww1_BUL_TUR.8.t: "What Attitude Should Nasim Bey Have?"
@@ -15107,7 +15107,7 @@ l_english:
  ww1_BUL_TUR.8.c: "Strict"
 
  ww1_BUL_TUR.9.t: "Nasim Bey Has a Sympathetic Attitude"
- ww1_BUL_TUR.9.d: "Nasim Bey is displaying a sympathetic attitude during the negotiations, signaling a willingness to compromise."
+ ww1_BUL_TUR.9.d: "Nasim Bey is displaying a sympathetic attitude during the negotiations, signaling a, suspicious amount willingness to compromise. Nasim Bey even went as far as to blame the multitude of problems on the Young Turk's government,"
  ww1_BUL_TUR.9.a: "Interesting"
 
  ww1_BUL_TUR.10.t: "Border Conflicts"
