--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -5094,6 +5094,9 @@ ww1_romania.32.t:0 "French Weapon Support Withdrawn"
 ww1_romania.32.a:0 "Whatever."
 ww1_romania.38.t:0 "German Weapon Support Withdrawn"
 ww1_romania.38.a:0 "Whatever."
+ww1_romania.53.t:0 "Bucharest Balloon Festival"
+ww1_romania.53.d:0 "Today in Bucharest, tens of thousands of citizens gathered together to launch tens of thousands of balloons into the air. While there was the slight issue of there being more balloons then expected, the festival went well with it even attracting some media attention outside Romania. For a brief moment, the sky wasn't visible to the city due to how many balloons were launched."
+ww1_romania.53.a:0 "Interesting"
 ww1_romania.36.t:0 "A Shifting Coalition"
 ww1_romania.36.d:0 "In France, Russia, Austria, Germany, America, and the vast majority of countries, the political divide is best seen as a rural vs urban issues. Those in the urban areas are generally more liberal while those in rural areas are more conservative. In Romania, however, this is not the case. The rural areas have generally supported the liberal PNL, who has promised them much in the form of land reform, while those in the urban areas generally benefit from the PC's focus on education. With the appointment of Titu Maiorescu, coalitions are shifting once again.\nWith Maiorescu's focus on rural issues, those who have often felt ignored by the elitist conservative PC have began to rethink their future votes. Although not a liberal, Maiorescu has unorthodox views on land reform for a conservative, which has helped shift the rural areas towards the PC. If Maiorescu can sucessfully sway rural Romania to the PC while mantaining strong support in urban areas, it's possible he could secure an electoral mandate for the next 100 years."
 ww1_romania.36.a:0 "We're going to make history!"
@@ -5106,7 +5109,14 @@ ww1_romania.39.d:0 "In Moldavia recently, socialist clubs have been gaining ever
 ww1_romania.39.a:0 "Something must be done."
 ROM_not_we_and_them_but_us:0 "Unity of the 2 Estates"
 ROM_invite_jews:0 "A Safe Haven for the Jews"
+ww1_romania.54.t:0 "King Carol Volunteers at Food Shelter"
+ww1_romania.54.d:0 "Today, King Carol was seen volunteering at a food shelter for the needy. He was seen joining the volunteers there handing out food, talking with citizens, and even donated some of his own money to the location. This event has circulating around the news as of late, boosting peoples opinion of the King"
+ww1_romania.54.a:0 "What a humble man!"
 ROM_the_party_of_thieves:0 "The Party of Thieves"
+ww1_romania.55.t:0 "Pro Romanian Protests in Moldova"
+ww1_romania.55.d:0 "Today several Romanian protesters took to the street in Russia demanding more autonomy and rights, with some even waving Romanian flags. With the Russian police responding brutually, the incident has seen the government face pressure to condemn Russian actions. "
+ww1_romania.55.a:0 "This is an outrage! Condemn them"
+ww1_romania.55.b:0 "Lets act rationally here..."
 ROM_sec:0 "Modify §YRomanian Army§! by\n£organization_gain_texticon Army Organization Regain: §G+5.00%§!\n£attacker_speed_texticon Division Speed: §G+5.00%§!"
 ROM_the_southern_wall:0 "The Southern Wall"
 ROM_stragetic_fortifications_on_the_southern_border:0 "Fortify Key Cities on the Bulgarian Border"
