air p1 wait for silent instruction for p2

--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -5117,6 +5117,8 @@ ww1_romania.55.t:0 "Pro Romanian Protests in Moldova"
 ww1_romania.55.d:0 "Today several Romanian protesters took to the street in Russia demanding more autonomy and rights, with some even waving Romanian flags. With the Russian police responding brutually, the incident has seen the government face pressure to condemn Russian actions. "
 ww1_romania.55.a:0 "This is an outrage! Condemn them"
 ww1_romania.55.b:0 "Lets act rationally here..."
+you_are_now_happy:0 "You are now §GHappy§!"
+ROM_advancements_in_plane_technology:0 "Advancements in Plane Technology"
 ROM_sec:0 "Modify §YRomanian Army§! by\n£organization_gain_texticon Army Organization Regain: §G+5.00%§!\n£attacker_speed_texticon Division Speed: §G+5.00%§!"
 ROM_the_southern_wall:0 "The Southern Wall"
 ROM_stragetic_fortifications_on_the_southern_border:0 "Fortify Key Cities on the Bulgarian Border"
