--- a/localisation/english/ww1_decisions_l_english.yml
+++ b/localisation/english/ww1_decisions_l_english.yml
@@ -9320,12 +9320,16 @@ ROM_adopt_a_workers_right_plank: "Adopt a Platform on Workers Rights "
 king_opinion_improve.tt:0 "The king's opinion of the current government will §Gimprove§!"
 king_opinion_worse.tt:0 "The king's opinion of the current government will §Rworsen§!"
 ROM_kings_rotation_desc:0 "Romania's King prefers a 'rotation' between the 3 main parties of Romania, the §lPNL§!, the §mPCD§!, and the §cPC§!. As such, Romania's King generally loses confidence in the ruling government the longer it rules."
+ROM_military_category:0 "Military Decisions"
+ROM_evaluate_chitila:0 "Evaluate Planes at Chitila"
+ROM_chitila_flag:9 "Has Evaluated Planes at Chitila"
 the_great_communicator:0 "The Great Communicator"
  ROM_kings_country_category:0 "The Puppet Master"
 ROM_barbu_delavrancea:0 "Barbu Delavrancea"
 ROM_constantin_arion:0 "Constantin Arion"
 ROM_constantin_motru:0 "Constantin Montru"
 sociologist:0 "Sociologist"
+ROM_second_world_flight:0 "Second Flight in the World"
  ROM_titu_maiorescu:0 "Titu Maiorescu"
  ROM_kings_country_category_desc:0 "While a constitutional monarchy with quite strong seperations of power, the constitution does delegate many powers to the king. Romanias king can outright dismiss governments as well as dissolve parliament in times of crisis. While very rarely used, while also holding huge influence over the opinions of Romanias public and politicians. If the king is angered by our government too much, they may support the opposition or even resort to §Rextreme measures§!. In addition, if the king approves of our government, they may use their political clout to help push our agenda.\n\nThe king's opinion can very from the following:\n§RVery negative§!, which gives us:\nPolitical Power Gain: §R-20%§!\nStability: §R-12.00%§!\n§ONegative§!, which gives us:\nPolitical Power Gain: §R-10%§!\nStability: §R-6.00%§!\n§YNeutral§!, which gives us:\nPolitical Power Gain: §Y+0%§!\nStability: §Y+0.00%§!\n§7Positive§!, which gives us:\nPolitical Power Gain: §G+10%§!\nStability: §G+6.00%§!\n§GVery positive§!, which gives us:\nPolitical Power Gain: §G+20%§!\nStability: §G+12.00%§!\n\nThe king's current opinion of the government is [KingsOpinionRomania]"
 ROM_dncdna:0 "§CIrrelevent§! to the Politics of Romania, meaning we will recieve:\nPolitical Power Gain: §Y+00%§!\nStability: §Y+0.00%§!"
