Tweak Lloyd George news

--- a/localisation/english/ww1_events_l_english.yml
+++ b/localisation/english/ww1_events_l_english.yml
@@ -9380,9 +9380,10 @@ kis_news.143.a:0 "Will the revolution spread to Western Europe?"
  eng_news.1.t: "Fall of the British Government"
  eng_news.1.d: "Following the Neutrality Crisis, the British government has completely collapsed.\n\nAll but a couple of minor ministers have totally resigned, and many members of Parliament are refusing to take their seats in protest. The British Government has effectively collapsed."
  eng_news.1.a: "Worrying Implications."
- eng_news.2.t: "David Lloyd George becomes Prime Minister"
- eng_news.2.d: "Following the resignation of Herbert Henry Asquith, David Lloyd George has become the Prime Minister of the United Kingdom of Great Britain and Ireland."
- eng_news.2.a: "Probably not the last liberal PM"
+ eng_news.2.t: "David Lloyd George Becomes British PM"
+ eng_news.2.d: "Following the resignation of Herbert Henry Asquith, David Lloyd George has become the Prime Minister of [ENG.GetNameDef]. Herbert Henry Asquith, whose many achievements included building up the Royal Navy while pursuing social reform and welfare, was not the leader enough we need in wartime. David Lloyd George, the Chancellor of the Exchequer, who held several posts and was the de facto backbone of Asquith's cabinet, eventually became Prime Minister."
+ eng_news.2.a: "Probably not the last liberal PM."
+ eng_news.2.b: "He may be a peace-seeker."
  eng_news.3.t: "The British Civil War"
  eng_news.3.d: "Following rapidly increasing tensions in Britain after the Weltkrieg, a Welsh miner's strike sparked an uprising across Britain, igniting the flames of Civil War.\n\nEdmund Allenby has rallied the royalists to his banner, and vows to put down the "Peasants' Rebellion"."
  eng_news.3.a: "Blimey!"
